zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/empty_extern_union.zig
export fn foo() void {
    const U = extern union {};
    _ = @as(U, undefined);
}

// error
//
// :2:22: error: extern union has no fields
